k8s-apps/blackjack/blackjack-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blackjack
  namespace: blackjack
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: blackjack
  template:
    metadata:
      labels:
        app: blackjack
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: blackjack
      containers:
      - name: blackjack
        image: shlomobarzili/blackjack:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: svc-blackjack 
  namespace: blackjack # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: blackjack
  type: NodePort # the type of the service
  ports:
    - protocol: TCP
      port: 80   # the port svc that expose
      nodePort: 30060 # the port of the pod | container
      targetPort: 80
