k8s-apps/blackjack/blackjack-ingress.yml
# for working with alb type application you need to install helm and install the ingress controller aws.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blackjack
  namespace: blackjack # the namespace that sperate the pods  between envroments.
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "blackjack-cert"    
                                            
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - blackjack-k3s.spider-shlomo.com
    secretName: blackjack-tls
  rules:
  # those rules for the application to allow the metrics/presentation/and the application
    - host: blackjack-k3s.spider-shlomo.com
    - http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation

          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation    

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation          

          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80

          - path: /presentation
            pathType: Prefix
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
                  
          - path: /
            pathType: Exact # allow only access to application
            backend:
              service:
                name: svc-blackjack
                port:
                  number: 80
